--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -7,12 +7,32 @@
     <title>Simple Dashboard</title>
     {% plotly_header %}
     {% plotly_footer %}
+    <style>
+        body {
+            margin: 0px;
+            padding: 0px;
+            overflow: hidden;
+        }
+
+        iframe {
+            overflow: hidden;
+            height: 100%;
+            width: 100%;
+            border: none;
+        }
+
+        .container {
+            width: 60%;
+            margin-inline: auto;
+        }
+    </style>
 </head>
 <body>
-    <h1>Home Page</h1>
-    <div class="{% plotly_class name='SimpleExample' %} card" style="height: 100%; width: 100%">
-        {% plotly_app name='SimpleExample' ratio=0.45 %}
+    <div class="container">
+        <h1>Home Page</h1>
+        <div class="{% plotly_class name='SimpleExample' %} card" style="height: 100%; width: 100%">
+            {% plotly_app name='SimpleExample' ratio=0.45 %}
+        </div>
     </div>
-    <br>
 </body>
 </html>
