--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -30,8 +30,18 @@
 <body>
     <div class="container">
         <h1>Home Page</h1>
-        <div class="{% plotly_class name='SimpleExample' %} card" style="height: 100%; width: 100%">
-            {% plotly_app name='SimpleExample' ratio=0.45 %}
+        <!-- 
+        <div class="{% plotly_class name='FearAndGreed' %} card" style="height: 100%; width: 100%">
+            {% plotly_app name='FearAndGreed' ratio=0.45 %}
+        </div> -->
+        <!-- <div class="{% plotly_class name='BitcoinDominance' %} card" style="height: 100%; width: 100%">
+            {% plotly_app name='BitcoinDominance' ratio=0.45 %}
+        </div> -->
+        <!-- <div class="{% plotly_class name='MarketCap' %} card" style="height: 100%; width: 100%">
+                    {% plotly_app name='MarketCap' ratio=0.45 %}
+        </div> -->
+        <div class="{% plotly_class name='Volume' %} card" style="height: 100%; width: 100%">
+                            {% plotly_app name='Volume' ratio=0.45 %}
         </div>
     </div>
 </body>
