--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -135,7 +135,9 @@
       </div>
     </div>
     <div class="cell" id="table">
-      table
+        <div class="{% plotly_class name='Table' %} card plot">
+          {% plotly_app name='Table' ratio=0.45 %}
+        </div>
     </div>
   </div>
 
